--- a/motherload.css
+++ b/motherload.css
@@ -365,7 +365,7 @@
   font-family:monospace
 }
 
-.sell-row {
+.sell-row, .inv-row {
   width: 14vw;
   padding: 2vh 2vw;
   display: flex;
@@ -377,10 +377,31 @@
   background-color: rgba(187, 186, 186, 0.861); 
 }
 
+.inv-row {
+  width: 50vw;
+}
+
 .selling-items-div {
   display: flex;
   flex-direction: column;
   width: 30vw;
+  height: 60vh;
+  justify-content: center;
+  align-items: center;
+  border: 0.8vw dashed rgba(71, 71, 71, 0.726);
+  outline: 0.3vw dashed rgba(139, 137, 11, 0.526);
+  outline-offset: -0.5vw;
+  background: linear-gradient(rgba(249, 249, 249, 0.844) 0%, rgba(228, 228, 228, 0.85) 10%, rgba(223, 223, 223, 0.85) 40%,
+  rgba(228, 228, 228, 0.85) 90%, rgba(249, 249, 249, 0.85)); 
+  font-family: monospace;
+  box-shadow: 1vw 1vw 1vw rgba(113, 113, 113, 0.619);
+  transition: 1s all;
+}
+
+.viewing-inv-div {
+  display: flex;
+  flex-direction: column;
+  width: 70vw;
   height: 60vh;
   justify-content: center;
   align-items: center;
@@ -462,6 +483,14 @@ body:has(.sell-button:hover) .sell-row {
   border-top: 0.2vh solid white;
   background-color: rgb(78, 78, 78);
   color: white;
+}
+
+.can-convert:hover {
+  border-bottom: 0.2vh solid white;
+  border-top: 0.2vh solid white;
+  background-color: rgb(78, 78, 78);
+  color: white;
+  cursor: pointer;
 }
 
 body:has(.sell-button:hover) .selling-items-div {
@@ -673,12 +702,20 @@ body:has(.store-clickable#store-inventory-upgrade-div:hover) #inventory-size-tex
     animation: emphasis 0.5s linear
   }
 
+  .mini-emphasis {
+    animation: mini-emphasis 0.3s linear
+  }
+
   .fill-fuel-animation {
     animation: fillfuel 0.5s linear;
   }
 
   .enemy-death {
     animation: enemydeath 0.1s;
+  }
+
+  .converted {
+    animation: converted 0.3s;
   }
 
   #cash-div {
@@ -735,6 +772,30 @@ body:has(.store-clickable#store-inventory-upgrade-div:hover) #inventory-size-tex
     }
     100% {
       scale: 1;
+    }
+  }
+
+  @keyframes mini-emphasis {
+    0% {
+      scale: 1;
+    }
+    50% {
+      scale: 1.3;
+    }
+    100% {
+      scale: 1;
+    }
+  }
+
+  @keyframes converted {
+    0% {
+      color: black;
+    }
+    50% {
+      color: white
+    }
+    100% {
+      color: black;
     }
   }
 
