--- a/motherload.css
+++ b/motherload.css
@@ -68,15 +68,16 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: right;
-    width: 27vw;
+    justify-content: center;
+    width: 23vw;
   }
 
   .level-div {
     background-color: rgb(208, 205, 205);
     border: 0.5vh solid grey;
-    width: 5vw;
+    width: 3.5vw;
     height: 4vh;
+    font-size: 2vmin;
     margin-top: 4vh;
   }
 
@@ -85,10 +86,10 @@
   }
 
   .bars-div {
-    width: 27vw;
+    width: 23vw;
     height: 10vh;
     margin-top: 0.5vh;
-    padding-left: 0.5vw;
+    font-size: 2.1vmin;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -167,7 +168,7 @@
   }
 
   .empty-fuel-bar, .empty-hull-bar, .empty-inv-bar {
-    width: 10vw;
+    width: 10vmax;
     height: 2vh;
     margin-right: 1vw;
     background-color: grey;
@@ -301,7 +302,7 @@
     display: flex;
     flex-direction: row;
     height: 10vh;
-    width: 4vw;
+    width: 3vw;
     justify-content: center;
     align-items: center;
   }
