added roulette boxes

--- a/motherload.css
+++ b/motherload.css
@@ -311,7 +311,7 @@ html, body {
   }
 
   .bronze-img, .enemy-img, .dirt-img, .stone-img,  .silver-img, .gold-img, .ruby-img, .amethyst-img, .diamond-img, .blkdiamond-img,
-  .stone-amethyst-img, .stone-diamond-img, .stone-blkdiamond-img {
+  .stone-amethyst-img, .stone-diamond-img, .stone-blkdiamond-img, .crate-img {
     width: 9.5vw;
     height: 10vh;
     object-fit: cover;
