rarer ore; back to buying upgrades

--- a/motherload.css
+++ b/motherload.css
@@ -15,7 +15,7 @@ html, body {
     flex-wrap: wrap;
     padding-top: 6vh;
     height: 100%;
-    width: 100vw;
+    width: 100%;
     margin-top: 12vh;
   }
 
